--- a/pokemon.html
+++ b/pokemon.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/styles/pokemon.css">
+    <link rel="stylesheet" href="styles/pokemon.css">
 </head>
 
 <body>
@@ -79,7 +79,7 @@
         </div>
     </div>
 
-    <script type="module" src="/scripts/pokemon/scripts.js"></script>
+    <script type="module" src="scripts/pokemon/scripts.js"></script>
 </body>
 
 </html>
