avançar e voltar pokemons

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!-- POSSIBILADE DE ESCOLHER GERAÇÃO  -->
     <div id="titulo">
         <img src="imagens/pokebola.svg" alt="icone Pokébola">
-        <a href="">Pokédex</a>
+        <a href="pokemon.html">Pokédex</a>
         <img src="imagens/pokebola.svg" alt="icone Pokébola">
     </div>
 
