--- a/pokemon.html
+++ b/pokemon.html
@@ -10,7 +10,11 @@
 
 <body>
     <div id="container">
-        <div id="nome">Pokemon</div>
+        <div class="areaNome">
+            <button class="seta" id="setaEsquerda" value="-1"><img src="imagens/setaEsquerda.svg" alt="Seta Esquerda"></button>
+            <div id="nome">Pokemon</div>
+            <button class="seta" id="setaDireita" value="1"><img src="imagens/setaDireita.svg" alt="Seta Direita"></button>
+        </div>
         <hr>
         <div class="topo">
             <div class="baseImagem">
